@@ -20,16 +20,19 @@
 
 package com.maxmind.geoip;
 
-import java.io.*;
+import java.io.File;
+import java.io.IOException;
+import java.io.RandomAccessFile;
 import java.net.InetAddress;
 import java.net.UnknownHostException;
-import java.lang.*;
+import java.util.HashMap;
+import java.util.Hashtable;
+import java.util.StringTokenizer;
 
-import java.util.*;
-
-import javax.naming.*;
-import javax.naming.directory.*;
-
+import javax.naming.NamingException;
+import javax.naming.directory.Attributes;
+import javax.naming.directory.DirContext;
+import javax.naming.directory.InitialDirContext;
 
 /**
  * Provides a lookup service for information based on an IP address. The location of
@@ -119,11 +122,11 @@ public class LookupService {
     private final static int MAX_ORG_RECORD_LENGTH = 300;
     private final static int FULL_RECORD_LENGTH = 60;
 
-    private static final Country UNKNOWN_COUNTRY = new Country("--", "N/A");
+    private final Country UNKNOWN_COUNTRY = new Country("--", "N/A");
 
-    private final static HashMap hashmapcountryCodetoindex = new HashMap(512);
-    private final static HashMap hashmapcountryNametoindex = new HashMap(512);
-    private final static String[] countryCode = {
+    private final HashMap hashmapcountryCodetoindex = new HashMap(512);
+    private final HashMap hashmapcountryNametoindex = new HashMap(512);
+    private final String[] countryCode = {
 	"--","AP","EU","AD","AE","AF","AG","AI","AL","AM","AN","AO","AQ","AR",
 	"AS","AT","AU","AW","AZ","BA","BB","BD","BE","BF","BG","BH","BI","BJ",
 	"BM","BN","BO","BR","BS","BT","BV","BW","BY","BZ","CA","CC","CD","CF",
@@ -144,7 +147,7 @@ public class LookupService {
 	"YT","RS","ZA","ZM","ME","ZW","A1","A2","O1","AX","GG","IM","JE","BL",
 	"MF"};
 
-    private final static String[] countryName = {
+    private final String[] countryName = {
 	"N/A","Asia/Pacific Region","Europe","Andorra","United Arab Emirates",
 	"Afghanistan","Antigua and Barbuda","Anguilla","Albania","Armenia",
 	"Netherlands Antilles","Angola","Antarctica","Argentina","American Samoa",
@@ -302,8 +305,8 @@ public class LookupService {
               
 	      // distributed service only
 	      for (i = 0; i < countryCode.length ;i++){
-	  	  hashmapcountryCodetoindex.put(countryCode[i],new Integer(i));
-		  hashmapcountryNametoindex.put(countryName[i],new Integer(i));
+	  	  hashmapcountryCodetoindex.put(countryCode[i],Integer.valueOf(i));
+		  hashmapcountryNametoindex.put(countryName[i],Integer.valueOf(i));
 	      }
 	    return;
 	}
@@ -312,7 +315,7 @@ public class LookupService {
 	}
 	file.seek(file.length() - 3);
         for (i = 0; i < STRUCTURE_INFO_MAX_SIZE; i++) {
-            file.read(delim);
+            file.readFully(delim);
             if (delim[0] == -1 && delim[1] == -1 && delim[2] == -1) {
                 databaseType = file.readByte();
                 if (databaseType >= 106) {
@@ -344,7 +347,7 @@ public class LookupService {
 			else {
 			    recordLength = ORG_RECORD_LENGTH;
 			}
-			file.read(buf);
+			file.readFully(buf);
 			for (j = 0; j < SEGMENT_RECORD_LENGTH; j++) {
 			    databaseSegments[0] += (unsignedByteToInt(buf[j]) << (j * 8));
 			}
@@ -366,7 +369,7 @@ public class LookupService {
 	    int l = (int) file.length();
 	    dbbuffer = new byte[l];
 	    file.seek(0);
-	    file.read(dbbuffer,0,l);
+	    file.readFully(dbbuffer,0,l);
 	    databaseInfo = this.getDatabaseInfo();
 	    file.close();
 	}
@@ -375,7 +378,7 @@ public class LookupService {
           index_cache = new byte[l];
           if (index_cache != null){
             file.seek(0);
-            file.read(index_cache,0,l);     
+            file.readFully(index_cache,0,l);     
           }          
         } else {
           index_cache = null;
@@ -418,7 +421,7 @@ public class LookupService {
      * @param ipAddress the IP address.
      * @return the country the IP address is from.
      */
-    public Country getCountry(InetAddress ipAddress) {
+    public synchronized Country getCountry(InetAddress ipAddress) {
         return getCountry(bytesToLong(ipAddress.getAddress()));
     }
 
@@ -456,7 +459,7 @@ public class LookupService {
         return getID(bytesToLong(ipAddress.getAddress()));
     }
 
-    public int getID(long ipAddress) {
+    public synchronized int getID(long ipAddress) {
         if (file == null && (dboptions & GEOIP_MEMORY_CACHE) == 0) {
             throw new IllegalStateException("Database has been closed.");
         }
@@ -469,21 +472,19 @@ public class LookupService {
      *
      * @return database info.
      */
-    public DatabaseInfo getDatabaseInfo() {
+    public synchronized DatabaseInfo getDatabaseInfo() {
         if (databaseInfo != null) {
             return databaseInfo;
         }
         try {
-            // Synchronize since we're accessing the database file.
-            synchronized (this) {
             _check_mtime();
                 boolean hasStructureInfo = false;
                 byte [] delim = new byte[3];
                 // Advance to part of file where database info is stored.
                 file.seek(file.length() - 3);
                 for (int i=0; i<STRUCTURE_INFO_MAX_SIZE; i++) {
-                    file.read(delim);
-                    if (delim[0] == 255 && delim[1] == 255 && delim[2] == 255) {
+                int read = file.read( delim );
+                if( read==3 && (delim[0]&0xFF)==255 && (delim[1]&0xFF) == 255 && (delim[2]&0xFF)==255 )
                         hasStructureInfo = true;
                         break;
                     }
@@ -497,10 +498,10 @@ public class LookupService {
                 }
                 // Find the database info string.
                 for (int i=0; i<DATABASE_INFO_MAX_SIZE; i++) {
-                    file.read(delim);
+                file.readFully(delim);
                     if (delim[0]==0 && delim[1]==0 && delim[2]==0) {
                         byte[] dbInfo = new byte[i];
-                        file.read(dbInfo);
+                    file.readFully(dbInfo);
                         // Create the database info object using the string.
                         this.databaseInfo = new DatabaseInfo(new String(dbInfo));
                         return databaseInfo;
@@ -508,7 +509,6 @@ public class LookupService {
                     file.seek(file.getFilePointer() -4);
                 }
             }
-        }
         catch (Exception e) {
             e.printStackTrace();
         }
@@ -722,7 +722,7 @@ public class LookupService {
 } else {
                 //read from disk
                 file.seek(record_pointer);
-                file.read(record_buf);
+                file.readFully(record_buf);
             }
 
             // get country
@@ -823,7 +823,7 @@ public class LookupService {
             } else {
 		//read from disk
                 file.seek(record_pointer);
-                file.read(buf);
+                file.readFully(buf);
             }
             while (buf[str_length] != '\0') {
 		str_length++;
@@ -863,7 +863,7 @@ public class LookupService {
 		//read from disk 
 		try {
                     file.seek(2 * recordLength * offset);
-                    file.read(buf);
+                    file.readFully(buf);
                 }
                 catch (IOException e) {
                     System.out.println("IO Exception");
